--- a/src/main/resources/templates/library.html
+++ b/src/main/resources/templates/library.html
@@ -6,67 +6,143 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" id="bootstrap-css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" id="bootstrap-data">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 </head>
 <body>
-<form th:action="@{/library}" method="POST" th:object="${library}">
-    <input type="hidden" th:value="${library.id}" th:field="*{id}">
-    <div class="row">
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="" th:name="name"
-                    th:value="${library.name}" th:field="*{name}"/>
-        </div>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="" th:name="tag"
-                   th:value="${library.tag}" th:field="*{tag}"/>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="" th:name="city"
-                   th:value="${library.city}" th:field="*{city}"/>
-        </div>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="" th:name="street"
-                   th:value="${library.street}" th:field="*{street}"/>
-        </div>
-        <div class="col-sm-4">
-            <input type="text" class="form-control" placeholder="" th:name="street_number"
-                   th:value="${library.streetNumber}" th:field="*{streetNumber}"/>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4">
-            <input type="time" class="form-control" placeholder="" th:name="from_time"
-                   th:value="${library.openFrom}" th:field="*{openFrom}"/>
-        </div>
-        <div class="col-sm-4">
-            <input type="time" class="form-control" placeholder="" th:name="to_time"
-                   th:value="${library.openTo}" th:field="*{openTo}"/>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-8">
-            <input type="textarea" class="form-control" placeholder="" th:name="description"
-                   th:value="${library.description}" th:field="*{description}"/>
-        </div>
-    </div>
-    <div class="col">
-        <input class="form-control" type="submit"/>
-    </div>
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <span class="fs-5 d-none d-sm-inline">Menu</span>
+                </a>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                    <li sec:authorize="isAnonymous()">
+                        <a href="/login" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/" class="nav-link align-middle px-0">
+                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Sprava knih</span>
+                        </a>
+                    </li>
+                    <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
+                        <a th:href="@{/reservations(library_id=${library.id})}" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava rezervaci</span></a>
+                    </li>
+                    <li sec:authorize="hasRole('ADMIN')">
+                        <a href="/libraries" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
+                    </li>
+                    <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
+                        <a href="/book" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Pridani knih</span></a>
+                    </li>
+                    <li sec:authorize="hasRole('ADMIN')">
+                        <a href="#" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
+                    </li>
+                    <!--<li>
+                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+                            <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
+                        <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+                            <li class="w-100">
+                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
+                            </li>
+                        </ul>
+                    </li> -->
+                </ul>
+                <hr>
+                <div class="dropdown pb-4" sec:authorize="isAuthenticated()">
+                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fs-4 bi-person-circle"></i>
+                        <span class="d-none d-sm-inline mx-1" sec:authentication="name"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
 
-</form>
-<a th:href="@{/(library_name=${library.name})}">
-    <button class="btn btn-primary">
-        Spravovat knizni tituly v knihovne
-    </button>
-</a>
-<a th:href="@{/reservations(library_id=${library.id})}">
-    <button class="btn btn-warning">
-        Spravovat rezervane
-    </button>
-</a>
+                        <li sec:authorize="hasRole('ADMIN')"><span class="dropdown-item">Administrator</span> </li>
+                        <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovnik</span> </li>
+                        <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Ctenar</span> </li>
+
+                        <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="#">My reservations</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="/logout">Sign out</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col py-3">
+            <form th:action="@{/library}" method="POST" th:object="${library}">
+                <input type="hidden" th:value="${library.id}" th:field="*{id}">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" placeholder="" th:name="name"
+                                th:value="${library.name}" th:field="*{name}"/>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" placeholder="" th:name="tag"
+                               th:value="${library.tag}" th:field="*{tag}"/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" placeholder="" th:name="city"
+                               th:value="${library.city}" th:field="*{city}"/>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" placeholder="" th:name="street"
+                               th:value="${library.street}" th:field="*{street}"/>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" placeholder="" th:name="street_number"
+                               th:value="${library.streetNumber}" th:field="*{streetNumber}"/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <input type="time" class="form-control" placeholder="" th:name="from_time"
+                               th:value="${library.openFrom}" th:field="*{openFrom}"/>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="time" class="form-control" placeholder="" th:name="to_time"
+                               th:value="${library.openTo}" th:field="*{openTo}"/>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-8">
+                        <input type="textarea" class="form-control" placeholder="" th:name="description"
+                               th:value="${library.description}" th:field="*{description}"/>
+                    </div>
+                </div>
+                <div class="col">
+                    <input class="form-control" type="submit"/>
+                </div>
+
+            </form>
+            <a th:href="@{/(library_name=${library.name})}">
+                <button class="btn btn-primary">
+                    Spravovat knizni tituly v knihovne
+                </button>
+            </a>
+            <a th:href="@{/reservations(library_id=${library.id})}">
+                <button class="btn btn-warning">
+                    Spravovat rezervane
+                </button>
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 <script>
     $(document).ready(function() {
