--- a/src/main/resources/templates/book_creation.html
+++ b/src/main/resources/templates/book_creation.html
@@ -30,6 +30,10 @@
                         <a href="/login" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
                     </li>
+                    <li sec:authorize="isAnonymous()">
+                        <a href="/register" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-gear-fill"></i> <span class="ms-1 d-none d-sm-inline">Register</span></a>
+                    </li>
                     <li class="nav-item">
                         <a href="/" class="nav-link align-middle px-0">
                             <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Sprava knih</span>
@@ -37,7 +41,7 @@
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
                         <a href="/libraries" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
+                            <iß class="fs-4 bi-building"></iß> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
                     </li>
                     <li sec:authorize="hasRole('ADMIN')">
                         <a href="#" class="nav-link px-0 align-middle">
