--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,6 +27,10 @@
                             <a href="/login" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
                         </li>
+                        <li sec:authorize="isAnonymous()">
+                            <a href="/register" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-gear-fill"></i> <span class="ms-1 d-none d-sm-inline">Register</span></a>
+                        </li>
                         <li sec:authorize="hasRole('ADMIN')">
                             <a href="/libraries" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
@@ -68,7 +72,7 @@
                             <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovnik</span> </li>
                             <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Ctenar</span> </li>
 
-                            <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="#">My reservations</a></li>
+                            <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="/reservationSummary">My reservations</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
