--- a/src/main/resources/templates/library.html
+++ b/src/main/resources/templates/library.html
@@ -27,6 +27,10 @@
                         <a href="/login" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
                     </li>
+                    <li sec:authorize="isAnonymous()">
+                        <a href="/register" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-gear-fill"></i> <span class="ms-1 d-none d-sm-inline">Register</span></a>
+                    </li>
                     <li class="nav-item">
                         <a href="/" class="nav-link align-middle px-0">
                             <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Sprava knih</span>
