--- a/src/main/resources/templates/reservation_summary.html
+++ b/src/main/resources/templates/reservation_summary.html
@@ -23,20 +23,28 @@
                     <span class="fs-5 d-none d-sm-inline">Menu</span>
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                    <li sec:authorize="isAnonymous()">
+                        <a href="/login" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Login</span></a>
+                    </li>
                     <li class="nav-item">
                         <a href="/" class="nav-link align-middle px-0">
                             <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Sprava knih</span>
                         </a>
                     </li>
-                    <li sec:authorize="isAnonymous()">
-                        <a href="/register" class="nav-link px-0 align-middle">
-                            <i class="fs-4 bi-gear-fill"></i> <span class="ms-1 d-none d-sm-inline">Register</span></a>
+                    <li sec:authorize="hasRole('ADMIN')">
+                        <a href="/libraries" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihoven</span></a>
+                    </li>
+                    <li sec:authorize="hasAnyRole('LIBRARIAN', 'ADMIN')">
+                        <a th:href="@{/library(library_id=${library})}" class="nav-link px-0 align-middle">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Sprava knihovny</span></a>
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
                         <a href="/book" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Pridani knih</span></a>
                     </li>
-                    <li>
+                    <li sec:authorize="hasRole('ADMIN')">
                         <a href="#" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
                     </li>
@@ -65,7 +73,7 @@
                         <li sec:authorize="hasRole('LIBRARIAN')"><span class="dropdown-item">Knihovnik</span> </li>
                         <li sec:authorize="hasRole('READER')"><span class="dropdown-item">Ctenar</span> </li>
 
-                        <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="#">My reservations</a></li>
+                        <li sec:authorize="hasRole('READER')"><a class="dropdown-item" href="/reservationSummary">My reservations</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -75,55 +83,36 @@
             </div>
         </div>
         <div class="col py-3">
-            <form th:action="@{/libraries}">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="Jmeno knihovny" th:name="library_name" th:value="${lib_name}"/>
-                    </div>
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="Tag" th:name="library_tag" th:value="${lib_tag}"/>
-                    </div>
-                    <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="City" th:name="library_city" th:value="${lib_name}"/>
-                    </div>
-                </div>
-                <div class="col">
-                    <input class="form-control" type="submit"/>
-                </div>
-
-            </form>
-            <table id="libraryListing" class="table table-hover">
+            <table id="reservationListing" class="table table-hover">
                 <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Jmeno</th>
-                    <th>Tag</th>
-                    <th>Mesto</th>
-                    <th>Akce</th>
+                    <th>Jmeno knihy</th>
+                    <th>ISBN</th>
+                    <th>Od</th>
+                    <th>Do</th>
+                    <th>Stav</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="library : ${libraries}">
-                    <td th:text="${library.id}">Onions</td>
-                    <td th:text="${library.name}">Onions</td>
-                    <td th:text="${library.tag}">2.41</td>
-                    <td th:text="${library.city}">yes</td>
-                    <td>
-                        <a th:href="@{/library(library_id=${library.id})}">
-                            <button class="btn btn-success">
-                                Spravovat
-                            </button>
-                        </a>
+                <tr th:each="reservation : ${reservations}">
+                    <td th:text="${reservation.bookName}">Onions</td>
+                    <td th:text="${reservation.isbn}">Onions</td>
+                    <td th:text="${{reservation.dateFrom}}">Onions</td>
+                    <td th:text="${{reservation.dateTo}}">Onions</td>
+                    <td th:switch="${reservation.borrowed}">
+                        <span th:case="false">Rezervovano</span>
+                        <span th:case="true">Vypujceno</span>
+                        <span th:case="*">Nevraceno</span>
                     </td>
                 </tr>
                 </tbody>
                 <tfoot>
                 <tr>
-                    <th>Id</th>
-                    <th>Jmeno</th>
-                    <th>Tag</th>
-                    <th>Mesto</th>
-                    <th>Akce</th>
+                    <th>Jmeno knihy</th>
+                    <th>ISBN</th>
+                    <th>Od</th>
+                    <th>Do</th>
+                    <th>Stav</th>
                 </tr>
                 </tfoot>
             </table>
@@ -134,7 +123,7 @@
 </body>
 <script>
     $(document).ready(function() {
-        $('#libraryListing').DataTable({searching: false});
+        $('#reservationListing').DataTable({searching: false});
     });
 </script>
 </html>
