--- a/src/main/resources/templates/book_creation.html
+++ b/src/main/resources/templates/book_creation.html
@@ -4,6 +4,8 @@
     <title>Create book</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -13,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css" id="bootstrap-data">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+
 </head>
 <body>
 <div class="container-fluid">
@@ -80,8 +83,8 @@
                     <div class="col-sm-4">
                         <input type="text" class="form-control" placeholder="Jmeno knihy" th:name="name" th:value="${book.name}"/>
                     </div>
-                    <div class="dropdown col-sm-4">
-                        <select class="library_search" name="state" th:name="libraryId">
+                    <div class="col-sm-4">
+                        <select class="library_search" th:name="libraryId">
                             <option th:each="library : ${libraries}" th:value="${library.id}" th:text="${library.name}"/>
                         </select>
                     </div>
@@ -91,7 +94,9 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-4">
-                        <input type="text" class="form-control" placeholder="Autor" th:name="authors" th:value="${book.authors}"/>
+                        <select class="author_search" th:name="authors" multiple="multiple">
+                            <option th:each="user : ${possible_authors}" th:value="${user.id}" th:text="${user.name}"/>
+                        </select>
                     </div>
                     <div class="col-sm-3">
                         <input type="date" class="form-control" th:name="release" th:value="${book.release}"/>
@@ -120,20 +125,18 @@
 </div>
 
 </body>
-<script>
+<script th:inline="javascript">
+/*<![CDATA[*/
     // In your Javascript (external .js resource or <script> tag)
     $(document).ready(function() {
         $('.library_search').select2();
+        $('.library_search').val('[[${chosen_library.getId()}]]')
+        $('.library_search').trigger('change');
+
+        $('.author_search').select2();
+        $('.author_search').val([[${chosen_authors}]])
+        $('.author_search').trigger('change');
     });
-    $('select').select2({
-        placeholder: [[${library_id}]] != 0?{
-        id: [[${library_id}]], // the value of the option
-        text: 'Select an option'
-        }:
-        {
-        id: -1, // the value of the option
-        text: 'Select an option'
-        }
-    });
+/*]]>*/
 </script>
 </html>
