--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,7 +44,7 @@
                                 <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Pridani knih</span></a>
                         </li>
                         <li sec:authorize="hasRole('ADMIN')">
-                            <a href="#" class="nav-link px-0 align-middle">
+                            <a href="/users" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
                         </li>
                         <!--<li>
@@ -82,6 +82,7 @@
                 </div>
             </div>
             <div class="col py-3">
+                <p th:if= "${message != ''}" th:text="${message}"></p>
                 <form th:action="@{/}">
                     <div class="row">
                         <div class="col-sm-4">
@@ -143,6 +144,7 @@
                         <th>Vydavatel</th>
                         <th>Hodnoceni</th>
                         <th sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">Akce</th>
+                        <th>Rezervace</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -178,6 +180,22 @@
                                 </button>
                             </a>
                         </td>
+                        <td sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">
+                            <!--th:href="@{/reservations(reservation_id=${book.id}, library_id=${library}, action=1)}" -->
+                            <a >
+                                <button class="btn btn-warning">Smazat</button>
+                            </a>
+                        </td>
+                        <td sec:authorize="hasRole('READER')">
+                            <a th:href="@{/reservations/create(book_id=${book.id})}">
+                                <button class="btn btn-primary">Rezervovat</button>
+                            </a>
+                        </td>
+                        <td sec:authorize="isAnonymous()">
+                            <a th:href="@{/register(book_id=${book.id})}">
+                                <button class="btn btn-primary">Rezervovat</button>
+                            </a>
+                        </td>
                     </tr>
                     </tbody>
                     <tfoot>
@@ -190,24 +208,13 @@
                         <th>Vydavatel</th>
                         <th>Hodnoceni</th>
                         <th sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN')">Akce</th>
+                        <th>Rezervace</th>
                     </tr>
                     </tfoot>
                 </table>
             </div>
-
         </div>
     </div>
-ß
-
-
-<div sec:authorize="hasRole('ADMIN')">
-    This content is only shown to administrators.
-</div>
-<div sec:authorize="hasRole('LIBRARIAN')">
-    This content is only shown to users.
-</div>
-Logged user: <span sec:authentication="name">Bob</span>
-
 </body>
 <script>
     $(document).ready(function() {
