--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -44,7 +44,7 @@
                             <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Pridani knih</span></a>
                     </li>
                     <li sec:authorize="hasRole('ADMIN')">
-                        <a href="#" class="nav-link px-0 align-middle">
+                        <a href="/users" class="nav-link px-0 align-middle">
                             <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sprava uzivatelu</span></a>
                     </li>
                     <!--<li>
@@ -83,6 +83,7 @@
         </div>
         <div class="col py-3">
             <form th:action="@{/register}" method="POST">
+                <input type="hidden" th:value="${book_id}" th:name="book_id">
                 <div class="row">
                     <div class="col-sm-4">
                         <input type="text" class="form-control" placeholder="Username" th:name="username" />
