--- a/src/main/resources/templates/book_creation.html
+++ b/src/main/resources/templates/book_creation.html
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <select class="author_search" th:name="authors" multiple="multiple">
-                            <option th:each="user : ${possible_authors}" th:value="${user.id}" th:text="${user.name}"/>
+                            <option th:each="user : ${possible_authors}" th:value="${user.id}" th:text="${user.name + ' ' + user.surname}"/>
                         </select>
                     </div>
                     <div class="col-sm-3">
